--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Gabriel Bundala",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "16.0.0",
     "express": "^4.17.1",
     "helmet": "4.6.0",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "6.1.8",
     "nodemon": "2.0.15"
   }
